force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Scheme_Issue__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheme Issue</label>
    <type>Checkbox</type>
</CustomField>