force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Scheme_Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Issue_Reason__c</fullName>
    <label>Scheme Issue Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>