force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Scheme_Item__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme_Item</label>
    <referenceTo>Buy_Product__c</referenceTo>
    <relationshipLabel>Secondary Invoice Items</relationshipLabel>
    <relationshipName>Secondary_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>